@@ -1,3 +1,8 @@
+2008-07-02  Martin Lambers <marlam@marlam.de>
+
+	* src/view_area.cpp: Clear the color buffer on initialization and on
+	certain errors.
+
 2008-07-01  Martin Lambers <marlam@marlam.de>
 
 	* gllib/glvm.h: Add cbrt() functions.
